--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -10,3 +10,6 @@ AmazonUrl=https://www.amazon.com
 TechproUrl=https://www.techproeducation.com
 
 DemoqaUrl=https://demoqa.com/webtables
+
+demoGuruUrl=http://demo.guru99.com/test/drag_drop.html
+tutorialUrl=http://tutorialsninja.com/demo/index.php?route=common/home
